@@ -1,17 +1,20 @@
 /*
- * Copyright 2021 Red Hat, Inc. and/or its affiliates.
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
  *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
+ *   http://www.apache.org/licenses/LICENSE-2.0
  *
- *       http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
  */
 package org.kie.kogito.resource.exceptions;
 
@@ -20,6 +23,7 @@ import java.util.HashMap;
 import java.util.Map;
 import java.util.function.Function;
 
+import org.kie.kogito.internal.process.runtime.WorkItemNotFoundException;
 import org.kie.kogito.process.NodeInstanceNotFoundException;
 import org.kie.kogito.process.NodeNotFoundException;
 import org.kie.kogito.process.ProcessInstanceDuplicatedException;
@@ -29,11 +33,13 @@ import org.kie.kogito.process.VariableViolationException;
 import org.kie.kogito.process.workitem.InvalidLifeCyclePhaseException;
 import org.kie.kogito.process.workitem.InvalidTransitionException;
 import org.kie.kogito.process.workitem.NotAuthorizedException;
+import org.kie.kogito.process.workitem.WorkItemExecutionException;
 
 public abstract class BaseExceptionsHandler<T> {
 
     public static final String MESSAGE = "message";
     public static final String PROCESS_INSTANCE_ID = "processInstanceId";
+    private static final String TASK_ID = "taskId";
     public static final String VARIABLE = "variable";
     public static final String NODE_INSTANCE_ID = "nodeInstanceId";
     public static final String NODE_ID = "nodeId";
@@ -43,9 +49,9 @@ public abstract class BaseExceptionsHandler<T> {
 
     private static class FunctionHolder<T, R> {
         private final Function<Exception, R> contentGenerator;
-        private final Function<R, T> responseGenerator;
+        private final Function<Exception, Function<R, T>> responseGenerator;
 
-        public FunctionHolder(Function<Exception, R> contentGenerator, Function<R, T> responseGenerator) {
+        public FunctionHolder(Function<Exception, R> contentGenerator, Function<Exception, Function<R, T>> responseGenerator) {
             this.contentGenerator = contentGenerator;
             this.responseGenerator = responseGenerator;
         }
@@ -54,20 +60,20 @@ public abstract class BaseExceptionsHandler<T> {
             return contentGenerator;
         }
 
-        public Function<R, T> getResponseGenerator() {
+        public Function<Exception, Function<R, T>> getResponseGenerator() {
             return responseGenerator;
         }
     }
 
-    private final FunctionHolder<T, Exception> defaultHolder = new FunctionHolder<>(ex -> ex, BaseExceptionsHandler.this::internalError);
+    private final FunctionHolder<T, Exception> defaultHolder = new FunctionHolder<>(ex -> ex, ex -> BaseExceptionsHandler.this::internalError);
 
     protected BaseExceptionsHandler() {
         mapper = new HashMap<>();
         mapper.put(InvalidLifeCyclePhaseException.class, new FunctionHolder<>(
-                ex -> Collections.singletonMap(MESSAGE, ex.getMessage()), BaseExceptionsHandler.this::badRequest));
+                ex -> Collections.singletonMap(MESSAGE, ex.getMessage()), ex -> BaseExceptionsHandler.this::badRequest));
 
         mapper.put(InvalidTransitionException.class, new FunctionHolder<>(
-                ex -> Collections.singletonMap(MESSAGE, ex.getMessage()), BaseExceptionsHandler.this::badRequest));
+                ex -> Collections.singletonMap(MESSAGE, ex.getMessage()), ex -> BaseExceptionsHandler.this::badRequest));
 
         mapper.put(NodeInstanceNotFoundException.class, new FunctionHolder<>(
                 ex -> {
@@ -77,7 +83,7 @@ public abstract class BaseExceptionsHandler<T> {
                     response.put(PROCESS_INSTANCE_ID, exception.getProcessInstanceId());
                     response.put(NODE_INSTANCE_ID, exception.getNodeInstanceId());
                     return response;
-                }, BaseExceptionsHandler.this::notFound));
+                }, ex -> BaseExceptionsHandler.this::notFound));
 
         mapper.put(NodeNotFoundException.class, new FunctionHolder<>(
                 ex -> {
@@ -87,10 +93,10 @@ public abstract class BaseExceptionsHandler<T> {
                     response.put(PROCESS_INSTANCE_ID, exception.getProcessInstanceId());
                     response.put(NODE_ID, exception.getNodeId());
                     return response;
-                }, BaseExceptionsHandler.this::notFound));
+                }, ex -> BaseExceptionsHandler.this::notFound));
 
         mapper.put(NotAuthorizedException.class, new FunctionHolder<>(
-                ex -> Collections.singletonMap(MESSAGE, ex.getMessage()), BaseExceptionsHandler.this::forbidden));
+                ex -> Collections.singletonMap(MESSAGE, ex.getMessage()), ex -> BaseExceptionsHandler.this::forbidden));
 
         mapper.put(ProcessInstanceDuplicatedException.class, new FunctionHolder<>(
                 ex -> {
@@ -99,7 +105,7 @@ public abstract class BaseExceptionsHandler<T> {
                     response.put(MESSAGE, exception.getMessage());
                     response.put(PROCESS_INSTANCE_ID, exception.getProcessInstanceId());
                     return response;
-                }, BaseExceptionsHandler.this::conflict));
+                }, ex -> BaseExceptionsHandler.this::conflict));
 
         mapper.put(ProcessInstanceExecutionException.class, new FunctionHolder<>(
                 ex -> {
@@ -109,7 +115,7 @@ public abstract class BaseExceptionsHandler<T> {
                     response.put(FAILED_NODE_ID, exception.getFailedNodeId());
                     response.put(MESSAGE, exception.getErrorMessage());
                     return response;
-                }, BaseExceptionsHandler.this::internalError));
+                }, ex -> BaseExceptionsHandler.this::internalError));
 
         mapper.put(ProcessInstanceNotFoundException.class, new FunctionHolder<>(
                 ex -> {
@@ -118,7 +124,12 @@ public abstract class BaseExceptionsHandler<T> {
                     response.put(MESSAGE, exception.getMessage());
                     response.put(PROCESS_INSTANCE_ID, exception.getProcessInstanceId());
                     return response;
-                }, BaseExceptionsHandler.this::notFound));
+                }, ex -> BaseExceptionsHandler.this::notFound));
+
+        mapper.put(WorkItemNotFoundException.class, new FunctionHolder<>(ex -> {
+            WorkItemNotFoundException exception = (WorkItemNotFoundException) ex;
+            return Map.of(MESSAGE, exception.getMessage(), TASK_ID, exception.getWorkItemId());
+        }, ex -> BaseExceptionsHandler.this::notFound));
 
         mapper.put(VariableViolationException.class, new FunctionHolder<>(
                 ex -> {
@@ -128,9 +139,28 @@ public abstract class BaseExceptionsHandler<T> {
                     response.put(PROCESS_INSTANCE_ID, exception.getProcessInstanceId());
                     response.put(VARIABLE, exception.getVariableName());
                     return response;
-                }, BaseExceptionsHandler.this::badRequest));
+                }, ex -> BaseExceptionsHandler.this::badRequest));
 
-        mapper.put(IllegalArgumentException.class, new FunctionHolder<>(ex -> Collections.singletonMap(MESSAGE, ex.getMessage()), BaseExceptionsHandler.this::badRequest));
+        mapper.put(WorkItemExecutionException.class, new FunctionHolder<>(
+                ex -> Map.of(MESSAGE, ex.getMessage()),
+                ex -> fromErrorCode(((WorkItemExecutionException) ex).getErrorCode())));
+
+        mapper.put(IllegalArgumentException.class, new FunctionHolder<>(ex -> Collections.singletonMap(MESSAGE, ex.getMessage()), ex -> BaseExceptionsHandler.this::badRequest));
+    }
+
+    private <R> Function<R, T> fromErrorCode(String errorCode) {
+        switch (errorCode) {
+            case "400":
+                return this::badRequest;
+            case "403":
+                return this::forbidden;
+            case "404":
+                return this::notFound;
+            case "409":
+                return this::conflict;
+            default:
+                return this::internalError;
+        }
     }
 
     protected abstract <R> T badRequest(R body);
@@ -146,8 +176,8 @@ public abstract class BaseExceptionsHandler<T> {
     public <R extends Exception, U> T mapException(R exception) {
         FunctionHolder<T, U> holder = (FunctionHolder<T, U>) mapper.getOrDefault(exception.getClass(), defaultHolder);
         U body = holder.getContentGenerator().apply(exception);
-        if (exception instanceof ProcessInstanceExecutionException) {
-            Throwable rootCause = ((ProcessInstanceExecutionException) exception).getCause();
+        if (exception instanceof ProcessInstanceExecutionException || exception instanceof WorkItemExecutionException) {
+            Throwable rootCause = exception.getCause();
 
             while (rootCause != null) {
                 if (mapper.containsKey(rootCause.getClass())) {
@@ -157,6 +187,6 @@ public abstract class BaseExceptionsHandler<T> {
                 rootCause = rootCause.getCause();
             }
         }
-        return holder.getResponseGenerator().apply(body);
+        return holder.getResponseGenerator().apply(exception).apply(body);
     }
 }
